canadensis_codegen_rust/tests/compile_pass/canadensis/Uint1Exhaustive.1.0.dsdl
#[canadensis(enum)]
uint1 value

uint1 BUTTERCREAM = 0
uint1 PASTRY_CREAM = 1

@sealed
