canadensis_codegen_rust/tests/compile_fail/variant_different_type/canadensis/VariantDifferentType.1.0.dsdl

#[canadensis(enum)]
uint4 value

uint8 VARIANT_1 = 1

@sealed
